Add components for initial tag release

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -6,7 +6,7 @@ author:
   name: Hugh Barnes
   email: dev@hubns.com
 homepage: https://github.com/hughbris/grav-theme-solarize
-demo: http://demo.yoursite.com
+# demo: http://demo.yoursite.com
 keywords: grav, theme, etc
 bugs: https://github.com/hughbris/grav-theme-solarize/issues
 readme: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
