--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -6,8 +6,9 @@ author:
   name: Hugh Barnes
   email: dev@hubns.com
 homepage: https://github.com/hughbris/grav-theme-solarize
-# demo: http://demo.yoursite.com
+demo: https://behold.metamotive.co.nz/solarize
 keywords: grav, theme, etc
 bugs: https://github.com/hughbris/grav-theme-solarize/issues
 readme: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
+docs: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
 license: MIT
