Blind update to deferred assets block for 1.6 compatibility, #5

--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Solarize
-version: 0.1.0
+version: 0.1.2
 description: Grav port of Solarize theme by Templated
 icon: rebel
 author:
@@ -12,3 +12,5 @@ bugs: https://github.com/hughbris/grav-theme-solarize/issues
 readme: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
 docs: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
 license: MIT
+dependencies:
+  - { name: grav, version: '>=1.5.10' }
