--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Solarize
-version: 0.1.2
+version: 0.1.3
 description: Grav port of Solarize theme by Templated
 icon: rebel
 author:
@@ -7,7 +7,7 @@ author:
   email: dev@hubns.com
 homepage: https://github.com/hughbris/grav-theme-solarize
 demo: https://behold.metamotive.co.nz/solarize
-keywords: grav, theme, etc
+keywords: grav, theme, templated, green
 bugs: https://github.com/hughbris/grav-theme-solarize/issues
 readme: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
 docs: https://github.com/hughbris/grav-theme-solarize/blob/develop/README.md
